Fix Title text alignment
Moving "text-align: left" to the #text container-fluid element breaks the text-align center when viewed in mobile. 

Fix:

#title {
  text-align: left;
}

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,12 @@ p {
 
 /* Title Section */
 
+#title {
+  text-align: left;
+}
+
 #title .container-fluid {
   padding: 3% 15% 7%;
-  text-align: left;
 }
 
 /* Title Image */
